# sibyl

./: .env.example  .env.quickstart.example  .env.test.example  .gitignore  .irisconfig  .prettierignore  .prettierrc.yaml  .prototools  CLAUDE.md  README.md  TRANSLATION_PLAN.md  Tiltfile  alembic.ini  analyze_translation.py  batch_translate.py  compose.e2e.yml  direct_replace.py  docker-compose.prod.yml  docker-compose.quickstart.test.yml  docker-compose.quickstart.yml  docker-compose.yml  install.sh  justfile  moon.yml  package.json  pnpm-lock.yaml  precise_replace.py  pyproject.toml  scan_code.py  scan_translations.py  scan_web.py  scan_web_all.py  scan_web_text.py  setup-dev.sh  simple_replace.py  slack.txt  translate_web.py  translate_web_ui.py  web_all_english.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  pypi-publish.yml  release.yml
.moon/: toolchain.yml  workspace.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_api_key_scopes_and_expiry.py  706dd0b41342_add_audit_logs_table.py  79011f63dfa8_initial_document_tables.py  8c0f0d9c5e2a_add_device_authorization_requests_table.py  9d0d6c6c2b0a_merge_auth_migrations.py  ae2c1a74e94a_drop_graph_name_from_organizations.py  d07ae5d9f2c3_add_tags_and_categories_to_crawl_sources.py
apps/api/: Dockerfile  moon.yml  pyproject.toml
apps/api/alembic/versions/: 0004_agent_message_tool_tracking.py  0005_project_permissions.py  0006_row_level_security.py  0007_system_settings.py  0008_add_shared_project.py  0009_planning_studio.py
apps/api/src/sibyl/: __init__.py  banner.py  config.py  crypto.py  locks.py  main.py  server.py
apps/api/src/sibyl/agents/: __init__.py  approvals.py  hooks.py  messages.py  orchestrator.py  redis_sub.py  runner.py  status.py  worktree.py
apps/api/src/sibyl/api/: app.py  decorators.py  dependencies.py  schemas.py
apps/api/src/sibyl/api/routes/: __init__.py  admin.py  agents.py  approvals.py  auth.py  crawler.py  entities.py  epics.py  graph.py  jobs.py  metrics.py  org_members.py  orgs.py  planning.py  project_members.py  rag.py  search.py  settings.py  setup.py  tasks.py
apps/api/src/sibyl/auth/: api_keys.py  authorization.py  dependencies.py  errors.py  mcp_oauth.py  rls.py
apps/api/src/sibyl/cli/: auth_store.py  common.py  context.py  crawl.py  db.py  entity.py  epic.py  explore.py  export.py  generate.py  main.py  project.py  source.py  task.py
apps/api/src/sibyl/crawler/: chunker.py  embedder.py  graph_integration.py  pipeline.py  service.py
apps/api/src/sibyl/db/: __init__.py  migrations.py  models.py  project_sync.py  sync.py
apps/api/src/sibyl/generator/: base.py  llm.py  relationships.py  stress.py  templates.py
apps/api/src/sibyl/ingestion/: extractor.py  storage.py
apps/api/src/sibyl/jobs/: __init__.py  agents.py  crawl.py  entities.py  pending.py  planning.py  queue.py  worker.py
apps/api/src/sibyl/planning/: __init__.py  materialization.py  orchestrator.py  personas.py  synthesis.py
apps/api/tests/: conftest.py  test_agents.py  test_agents_integration.py  test_agents_worktree.py  test_api_entities_create_task_fields.py  test_api_tasks_validation.py  test_auth_authorization.py  test_auth_http.py  test_auth_oauth_state.py  test_auth_sessions.py  test_auth_users_profile_update.py  test_auth_users_sessions_cookie.py  test_cli_auth_store.py  test_cli_epic.py  test_cli_org_client.py  test_communities.py  test_concurrent_writes.py  test_crawler_graph_integration.py  test_decorators.py  test_dedup.py  test_dependencies.py  test_e2e_workflows.py  test_graph_entities.py  test_graph_integration.py  test_graph_relationships.py  test_harness.py  test_integration_graphrag.py  test_locks.py  test_metrics.py  test_models.py  test_models_sources.py  test_models_tasks.py  test_pending_registry.py  test_retrieval.py  test_rls_policies.py  test_routes_project_members.py  test_summarize.py  test_tasks_dependencies.py  test_tasks_estimation.py  test_tasks_manager.py  (+3 more)
apps/api/tests/e2e/: conftest.py
apps/api/tests/harness/: context.py  helpers.py  mocks.py
apps/api/tests/live/: conftest.py  test_agents_live.py  test_git_workflow_live.py
apps/cli/: moon.yml  pyproject.toml
apps/cli/src/sibyl_cli/: auth_store.py  client.py  common.py  config_cmd.py  config_store.py  context.py  crawl.py  document.py  entity.py  epic.py  explore.py  local.py  main.py  project.py  source.py  task.py
apps/cli/tests/: test_auth_store.py  test_config_store.py
apps/e2e/: moon.yml  pyproject.toml
apps/e2e/tests/: conftest.py
apps/e2e/tests/cli/: test_projects.py  test_tasks.py
apps/web/: Dockerfile  moon.yml  next.config.ts  package.json
docs/: CONSOLIDATED_ARCHITECTURE.md  SCREENSHOTS_NEEDED.md  TASK_ARCHITECTURE_DIAGRAM.md  agent-system-prompt.md  graph-rag-implementation-roadmap.md  graph-rag-sota-research.md  index.md  moon.yml  package.json  pnpm-lock.yaml  sibyl-prompt-snippet.md
examples/: task_workflow_example.py
hooks/: README.md  configure.py  moon.yml  session-start.py  user-prompt-submit.py
i18n/: README.md  __init__.py  zh_CN.py
skills/: moon.yml
tests/: test_api_entities_create_task_fields.py  test_auth_api_key_scopes_rest.py  test_auth_audit_logs.py  test_auth_mcp_token_verifier.py  test_auth_organization_model.py  test_auth_tenancy.py  test_auth_users_profile_update.py  test_auth_users_sessions_cookie.py  test_cli_auth_store.py  test_cli_context.py  test_cli_epic.py  test_communities.py  test_concurrent_writes.py  test_config_security.py  test_crawler_chunker.py  test_crawler_graph_integration.py  test_e2e_workflows.py  test_graph_entities.py  test_graph_integration.py  test_graph_relationships.py  test_harness.py  test_integration_graphrag.py  test_models_sources.py  test_models_tasks.py  test_rag_api.py  test_retrieval.py  test_source_recovery.py  test_summarize.py  test_tasks_dependencies.py  test_tasks_estimation.py  test_tasks_manager.py  test_tasks_workflow.py  test_tools_core.py  test_tools_manage.py  test_websocket.py
web/: README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml
(+466 files in other folders)
