# Sibyl - Knowledge Graph MCP Server
# Graphiti-powered oracle of development wisdom

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sibyl"
version = "0.1.0"
description = "Sibyl: MCP server providing AI agents access to development wisdom via Graphiti knowledge graph"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Stefanie Jane", email = "stef@hyperbliss.tech" }]
keywords = ["mcp", "graphiti", "knowledge-graph", "ai", "sibyl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    # MCP Protocol
    "mcp>=1.25",
    # Knowledge Graph
    "graphiti-core[falkordb,anthropic]>=0.24",
    # Async support
    "anyio>=4.0",
    # HTTP server
    "uvicorn[standard]>=0.38",
    "starlette>=0.41.0",
    "fastapi>=0.115.0",
    # Auth + OAuth
    "httpx>=0.27",
    "pyjwt>=2.10",
    # Data validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Utilities
    "structlog>=24.0",
    "rich>=13.0",
    # Markdown parsing
    "mistune>=3.0",
    "pyyaml>=6.0",
    "typer>=0.20.0",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "alembic>=1.17.2",
    "greenlet>=3.3.0",
    "crawl4ai>=0.7.8",
    "arq>=0.26.3",
    "tomli-w>=1.2.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
generator = [
    "anthropic>=0.75",
    "faker>=30.0",
]
graphrag = [
    "networkx>=3.0",
    "python-louvain>=0.16",  # Louvain community detection
]
graphrag-leiden = [
    "networkx>=3.0",
    "leidenalg>=0.10",  # Leiden algorithm (better than Louvain)
    "igraph>=0.11",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
sibyl = "sibyl.cli:main"
sibyl-serve = "sibyl.main:main"

[project.urls]
Homepage = "https://github.com/hyperb1iss/conventions"
Repository = "https://github.com/hyperb1iss/conventions"
Issues = "https://github.com/hyperb1iss/conventions/issues"

# ============================================================================
# Hatch Build Configuration
# ============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/sibyl"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

# ============================================================================
# Ruff Configuration - Comprehensive Linting
# ============================================================================

[tool.ruff]
line-length = 100
# target-version inferred from requires-python = ">=3.13"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # Core Python
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "RUF",    # Ruff-specific rules
    # Testing
    "PT",     # flake8-pytest-style
    # Code quality
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
    "BLE",    # flake8-blind-except
    "DTZ",    # flake8-datetimez
    "G",      # flake8-logging-format
    "ICN",    # flake8-import-conventions
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # Pylint
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "S",      # flake8-bandit (security)
    "SLF",    # flake8-self
    "TRY",    # tryceratops
    "COM",    # flake8-commas
    "ERA",    # eradicate (commented code)
    "T20",    # flake8-print
    "ARG",    # flake8-unused-arguments
    # Modern Python & Performance
    "FURB",   # refurb - modern Python idioms
    "PERF",   # perflint - performance anti-patterns
    "LOG",    # flake8-logging - logging best practices
    "FLY",    # flynt - f-string improvements
    # Type Safety
    "TCH",    # flake8-type-checking - optimize type imports
    "FA",     # flake8-future-annotations
    # Code Hygiene
    "A",      # flake8-builtins - avoid shadowing builtins
    "TID",    # flake8-tidy-imports - import restrictions
    "SLOT",   # flake8-slots - enforce __slots__ where beneficial
]

ignore = [
    # Formatter conflicts
    "E501",    # Line too long (handled by formatter)
    "COM812",  # Missing trailing comma (conflicts with formatter)
    "ISC001",  # Single line implicit string concatenation
    # Complexity (tracked, not enforced)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value in comparison
    "C901",    # Too complex
    "PLR0912", # Too many branches
    "PLR0911", # Too many returns
    # Intentional patterns
    "S101",    # Use of assert (needed for tests and contracts)
    "TRY003",  # Long exception messages (prefer readable errors)
    "G004",    # Logging f-string (structlog handles this efficiently)
    "PLW2901", # Loop variable overwritten (intentional rebinding)
    "B005",    # Strip with multiple chars
    "S112",    # try-except-continue (acceptable for parsing)
    # Style preferences
    "RUF012",  # ClassVar annotations (Pydantic models)
    "RUF022",  # __all__ sorting (comments make this awkward)
    "PLC0415", # Import not at top level (lazy imports for optional deps)
    "PIE810",  # Startswith tuple (readability preference)
    "SIM102",  # Nested if (clearer for filter chains)
    "SIM108",  # Ternary operator (explicit if/else preferred)
    "TRY300",  # Return in try (acceptable pattern)
    "TRY301",  # Abstract raise to inner function
    "B007",    # Unused loop variable
    "E741",    # Ambiguous variable name
    # Defer for later cleanup
    "DTZ003",  # datetime.utcnow() deprecation
    "ARG002",  # Unused method arguments (future impl)
    "BLE001",  # Blind except (graceful degradation in tools)
    # New rules - relax where overly strict
    "FURB101", # open().read() vs Path().read_text() (context-dependent)
    "FURB103", # open().write() vs Path().write_text()
    "PERF203", # try-except in loop (sometimes necessary)
    "TC001",   # Move import into TYPE_CHECKING (first-party ok at runtime)
    "TC002",   # Move import into TYPE_CHECKING (third-party - be selective)
    "TC003",   # Move stdlib import into TYPE_CHECKING (marginal benefit)
    "FA100",   # Missing from __future__ import annotations (3.13 not needed)
    "SLOT000", # __slots__ in subclass of str/tuple/etc (special cases)
    "A005",    # Module shadowing builtin (common: types.py, logging.py)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Assert allowed in tests
    "ARG001",  # Unused function args (fixtures)
    "PLR2004", # Magic values in tests OK
    "SLF001",  # Private member access OK in tests
    "N806",    # Variable naming (G for NetworkX is convention)
    "SIM105",  # try-except-pass sometimes clearer than contextlib.suppress
    "B017",    # Blind exception assertion sometimes needed
    "PT011",   # Broad pytest.raises sometimes needed
    "ERA001",  # Commented code OK for documentation in tests
    "PERF401", # List comprehension vs manual append (clarity in tests)
]
"examples/**/*.py" = [
    "T201",    # Print statements OK in examples
    "TRY002",  # Simple Exception OK in examples
    "BLE001",  # Blind except OK in examples
    "PLR0915", # Long functions OK in examples
]
"src/sibyl/cli/**/*.py" = [
    "T201",    # Print statements OK in CLI (user-facing output)
]
"alembic/**/*.py" = [
    "ERA001",  # Commented code OK in migrations (documentation)
    "INP001",  # Implicit namespace OK for alembic
]

[tool.ruff.lint.isort]
known-first-party = ["sibyl"]
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body", "fastapi.Path"]

[tool.ruff.lint.flake8-type-checking]
# Pydantic and FastAPI need runtime access to annotations
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlmodel.SQLModel",
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "pydantic.dataclasses.dataclass",
]
# Only flag third-party imports when safe to move
strict = false

[tool.ruff.lint.flake8-tidy-imports]
# Ban relative imports from parent modules (cleaner imports)
ban-relative-imports = "parents"

[tool.ruff.lint.pylint]
# Raise thresholds slightly for complex async code
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

# ============================================================================
# MyPy Configuration - Strict Type Checking
# ============================================================================

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = ["graphiti_core.*", "mcp.*"]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "-v",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:Remove `format_exc_info`:UserWarning",
    # Suppress async cleanup warnings that occur during test teardown
    "ignore:unclosed.*:ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["src"]
branch = true
parallel = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "@overload",
]
fail_under = 80
show_missing = true

# ============================================================================
# Pyright Configuration (Alternative to MyPy)
# ============================================================================

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"  # Strict on our code, lenient on external libs
reportMissingImports = false   # Graphiti not typed
reportMissingTypeStubs = false
reportUnknownMemberType = false        # External libs not typed
reportUnknownVariableType = false      # External libs not typed
reportUnknownArgumentType = false      # External libs not typed
reportUnknownParameterType = false     # External libs not typed
reportAttributeAccessIssue = false     # External libs not typed
reportArgumentType = false             # MCP lib type mismatches
reportDeprecated = "warning"           # Track deprecations
reportCallIssue = "warning"            # Track API misuse

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]
