# Sibyl - Collective Intelligence Runtime
# Shared memory, task orchestration, and collaborative knowledge for AI agents

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project Metadata
# =============================================================================

[project]
name = "sibyl"
version = "0.1.0"
description = "Collective Intelligence Runtime - shared memory, task orchestration, and collaborative knowledge for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Stefanie Jane", email = "stef@hyperbliss.tech" }]
keywords = ["ai-agents", "multi-agent", "knowledge-graph", "task-orchestration", "collective-intelligence", "graph-rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    # Core Framework
    "fastapi>=0.115.0",
    "mcp>=1.25",
    "starlette>=0.41.0",
    "uvicorn[standard]>=0.38",
    # Knowledge Graph
    "graphiti-core[falkordb,anthropic]>=0.24",
    # Database
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "pgvector>=0.4.2",
    "sqlmodel>=0.0.27",
    # Auth & HTTP
    "httpx>=0.27",
    "pyjwt>=2.10",
    # Data & Validation
    "email-validator>=2.3.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # CLI & Output
    "rich>=13.0",
    "typer>=0.20.0",
    # Utilities
    "anyio>=4.0",
    "crawl4ai>=0.7.8",
    "greenlet>=3.3.0",
    "mistune>=3.0",
    "structlog>=24.0",
    "tomli-w>=1.2.0",
    # Background Jobs
    "arq>=0.26.3",
]

[project.optional-dependencies]
generator = [
    "anthropic>=0.75",
    "faker>=30.0",
]
graphrag = [
    "networkx>=3.0",
    "python-louvain>=0.16",
]
graphrag-leiden = [
    "igraph>=0.11",
    "leidenalg>=0.10",
    "networkx>=3.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]

[project.scripts]
sibyl = "sibyl.cli:main"
sibyl-serve = "sibyl.main:main"

[project.urls]
Homepage = "https://github.com/hyperb1iss/sibyl"
Repository = "https://github.com/hyperb1iss/sibyl"
Issues = "https://github.com/hyperb1iss/sibyl/issues"

# =============================================================================
# Build Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["src/sibyl"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

# =============================================================================
# Development Dependencies (uv)
# =============================================================================

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
]

# =============================================================================
# Ruff - Linting & Formatting
# =============================================================================

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    # Core
    "A",      # flake8-builtins
    "ARG",    # flake8-unused-arguments
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "COM",    # flake8-commas
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "ERA",    # eradicate
    "F",      # pyflakes
    "FA",     # flake8-future-annotations
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T20",    # flake8-print
    "TC",     # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
]

ignore = [
    # Formatter conflicts
    "COM812",  # trailing comma (formatter handles)
    "E501",    # line length (formatter handles)
    "ISC001",  # implicit string concat

    # Complexity (tracked elsewhere)
    "C901",    # too complex
    "PLR0911", # too many returns
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR2004", # magic values

    # Intentional patterns
    "B005",    # strip with multiple chars
    "B007",    # unused loop variable
    "E741",    # ambiguous variable name
    "G004",    # logging f-string (structlog)
    "PLW2901", # loop variable overwritten
    "S101",    # assert (tests/contracts)
    "S112",    # try-except-continue
    "TRY003",  # long exception messages

    # Style preferences
    "PLC0415", # import not at top (lazy imports)
    "PIE810",  # startswith tuple
    "RUF012",  # ClassVar annotations (Pydantic)
    "RUF022",  # __all__ sorting
    "SIM102",  # nested if
    "SIM108",  # ternary operator
    "TRY300",  # return in try
    "TRY301",  # abstract raise

    # Type checking (selective)
    "FA100",   # future annotations (3.13 native)
    "TC001",   # move first-party to TYPE_CHECKING
    "TC002",   # move third-party to TYPE_CHECKING
    "TC003",   # move stdlib to TYPE_CHECKING

    # Deferred cleanup
    "ARG002",  # unused method arguments
    "BLE001",  # blind except (graceful degradation)
    "DTZ003",  # datetime.utcnow deprecation

    # Overly strict
    "A005",    # module shadowing builtin
    "FURB101", # Path.read_text preference
    "FURB103", # Path.write_text preference
    "PERF203", # try-except in loop
    "SLOT000", # __slots__ edge cases
]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["ERA001", "INP001"]
"examples/**/*.py" = ["BLE001", "PLR0915", "T201", "TRY002"]
"src/sibyl/cli/**/*.py" = ["T201"]
"tests/**/*.py" = [
    "ARG001", "B017", "ERA001", "N806", "PERF401",
    "PLR2004", "PT011", "S101", "SIM105", "SLF001",
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["sibyl"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Body",
    "fastapi.Depends",
    "fastapi.Path",
    "fastapi.Query",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "pydantic_settings.BaseSettings",
    "sqlmodel.SQLModel",
]
runtime-evaluated-decorators = [
    "pydantic.dataclasses.dataclass",
    "pydantic.validate_call",
]
strict = false

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 15
max-returns = 8
max-statements = 60

# =============================================================================
# Pyright - Type Checking
# =============================================================================

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

# External libs aren't fully typed
reportArgumentType = false
reportAttributeAccessIssue = false
reportCallIssue = "warning"
reportDeprecated = "warning"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownArgumentType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownVariableType = false

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-ra", "--strict-markers", "--strict-config", "-v"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:Remove `format_exc_info`:UserWarning",
    "ignore:unclosed.*:ResourceWarning",
]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]
parallel = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "@overload",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "pragma: no cover",
    "raise NotImplementedError",
]
fail_under = 80
show_missing = true
